# BrainBridge

./: .gitignore  AGENTS.md  LICENSE  README.md  README.zh-CN.md  instruction.md  instruction.zh-CN.md  pyproject.toml  requirements.txt
.github/: FUNDING.yml
.test/: test.py  test_1.py  test_2.py  test_3.py  test_4.py  test_5.py  test_7.py  test_file_utils.py  test_imports.py  test_pytest_smoke.py  test_user_config.py
brainbridge/: __init__.py
brainbridge/lib/: __init__.py
brainbridge/lib/runtime/: __init__.py
brainbridge/run_lib/: __init__.py
brainbridge/run_lib/files_manager/: __init__.py  manager.py
brainbridge/run_lib/mini_tools/: __init__.py  chardet.py  decision_panel.py  files_convg.py  loading_bar.py
brainbridge/run_lib/provider_converter/: __init__.py  converter.py
brainbridge/run_lib/requests_core/: request_core.py
brainbridge/run_lib/terminal_core/: __init__.py  keyboard.py
brainbridge/run_lib/terminial_core/: __init__.py  keyboard.py
brainbridge/static_lib/: __init__.py
brainbridge/static_lib/checker/: __init__.py  checker.py
brainbridge/static_lib/information/: information.py
brainbridge/static_lib/logger/: __init__.py  log_core.py
brainbridge/utils/: __init__.py  decision_panel.py  files_convg.py  loading_bar.py
config/sys_conf/: base_arg_match.json  escape_table.json
config/user_conf/: base_arg_match.json  escape_table.json
src/: __init__.py  _main_test.py  dir_tree.txt
src/.test/: simple_import.py  test_1.py  test_2.py  test_3.py  test_4.py  test_5.py  test_7.py
src/.test/sandbox/: README.md
(+77 files in other folders)
