[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "brainbridge"
version = "0.1.0"
description = "BrainBridge runtime and utility modules."
requires-python = ">=3.12"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["."]
include = ["brainbridge*"]

[tool.pytest.ini_options]
testpaths = [".test"]
python_files = [
    "test_1.py",
    "test_2.py",
    "test_5.py",
    "test_7.py",
    "test_imports.py",
    "test_pytest_smoke.py",
    "test_user_config.py",
]
norecursedirs = [".test/sandbox", ".test/__pycache__"]
addopts = "-q"
